--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-  background-color: #181818;
+  background-color: #18181f;
   color: #fff;
   font-family: sans-serif;
   margin: 0;
@@ -24,6 +24,26 @@ header {
   box-shadow: grey 0px 2px 10px -2px;
   border-radius: 10px;
 }
+
+.texto-sombra {
+display: flex;
+justify-content: center;
+text-align: center;
+font-size: 50px;
+color: #fff;
+transition: text-shadow 0.3s ease;
+}
+.texto-sombra:hover {
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+}
+
+.logo {
+  cursor: pointer;
+  transition: text-shadow 0.3s ease;
+  }
+  .logo:hover{
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
 
 /* BANNER */
 
@@ -68,7 +88,7 @@ nav {
 
 nav a {
 width: 100px;
-height: 20px;
+height: 25px;
 color: black;
 background: #fff;
 cursor: pointer;
@@ -77,6 +97,29 @@ z-index: 0;
 border-radius: 10px;
 box-shadow: grey 0px 2px 10px -2px,
 black 0px 2px 4px 0px;
+color: #333;
+transition: text-shadow 0.3s ease;
+}
+nav a:hover{
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+nav li {
+  width: 100px;
+  height: 25px;
+  color: #fff;
+  background: #000;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  box-shadow: grey 0px 2px 10px -2px,
+  black 0px 2px 4px 0px;
+  color: #ffe;
+  transition: text-shadow 0.3s ease;
+  }
+nav li:hover {
+  text-shadow:2px 2px 5px rgba(255, 255, 255, 1); 
 }
 
 .l {
@@ -90,6 +133,7 @@ black 0px 2px 4px 0px;
   text-decoration: none;
 }
 
+
 main {
   padding: 20px;
   display: flex;
@@ -101,18 +145,73 @@ section {
   margin-top: 30px;
 }
 
-/* OBJETIVOS */
+/* SOBRE RIZUTAANIME */
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
+  display: flex;
+  gap: 20px;
+  margin: 50px;
+  background-color: #fff;
+  width: 1440;
+}
+
+.boxes2 {
+  justify-content: right;
+}
+
+.gallery .boxes2{
+  display: flex;
+  justify-content: right;
+  width: 100%;
+  padding: 10px;
+  margin-right: 5px;
 }
 
 .gallery img {
-  width: 100%;
-  height: auto;
+  float: left;
+  width: 40%;
+  height: 40%;
+  margin-right: 10px;
 }
+
+.te {
+  font-size: 28px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: #000;
+}
+
+.box2 {
+  float: right;
+  width: 100%;
+  height: 100%;
+  display:flex;
+  text-align: left;
+  flex-direction:column;
+  justify-content: left;
+}
+
+.anime_link{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #000;
+  text-decoration:none;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.texto-sombra-2 {
+  color: #000;
+  transition: text-shadow 0.3s ease;
+  text-align: left;
+  font-size: 38px;
+  }
+  .texto-sombra-2:hover {
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
+
+/* OBJETIVOS e MISSÃO, VISÃO E VALORES */
 
 .social {
   display: flex;
@@ -123,26 +222,48 @@ section {
 }
 
 .box img {
-  width: 170px;
+  display: flex;
+  align-items: center;
+  gap:20px;
+  width: 350px;
+}
+
+.box .img2{
+  display: flex;
+  align-items: center;
+  gap:20px;
+  width: 90px;
 }
 
 .social .container .boxes {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 30px 0;
 }
 
 .social p {
   text-align: center;
+  color: #000;
+  font-size: 28px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  
 }
 
 .box {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px;
 }
+
+.texto-sombra-1 {
+  color: #fff;
+  transition: text-shadow 0.3s ease;
+  }
+  .texto-sombra-1:hover {
+      text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+  }
 
 /* FOOTER */
 
@@ -168,12 +289,12 @@ footer {
 
 .card {
   width: 50%;
-  background-color: #e5e5e5;
+  background-color: #fff;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  color: palevioletred;
+  color: black;
   flex-direction: column;
   height: fit-content;
   padding: 20px 0;
