--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,17 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-  background-color: #18181f;
+  background-color: #181818;
   color: #fff;
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 
 .container {
   display: flex;
-  width: 80%;
+  width: 100%;
   margin: auto;
+}
+
+.container1 {
+  display: flex;
+  width: 80%;
+  margin: 0px, 100px, 0px, 100px;
 }
 
 header {
@@ -26,24 +44,26 @@ header {
 }
 
 .texto-sombra {
-display: flex;
-justify-content: center;
-text-align: center;
-font-size: 50px;
-color: #fff;
-transition: text-shadow 0.3s ease;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 50px;
+  color: #fff;
+  transition: text-shadow 0.3s ease;
 }
+
 .texto-sombra:hover {
-    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
 }
 
 .logo {
   cursor: pointer;
   transition: text-shadow 0.3s ease;
-  }
-  .logo:hover{
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  }
+}
+
+.logo:hover {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
 
 /* BANNER */
 
@@ -87,20 +107,21 @@ nav {
 }
 
 nav a {
-width: 100px;
-height: 25px;
-color: black;
-background: #fff;
-cursor: pointer;
-position: relative;
-z-index: 0;
-border-radius: 10px;
-box-shadow: grey 0px 2px 10px -2px,
-black 0px 2px 4px 0px;
-color: #333;
-transition: text-shadow 0.3s ease;
+  width: 100px;
+  height: 25px;
+  color: black;
+  background: #fff;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  box-shadow: grey 0px 2px 10px -2px,
+    black 0px 2px 4px 0px;
+  color: #333;
+  transition: text-shadow 0.3s ease;
 }
-nav a:hover{
+
+nav a:hover {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -114,12 +135,13 @@ nav li {
   z-index: 0;
   border-radius: 10px;
   box-shadow: grey 0px 2px 10px -2px,
-  black 0px 2px 4px 0px;
+    black 0px 2px 4px 0px;
   color: #ffe;
   transition: text-shadow 0.3s ease;
-  }
+}
+
 nav li:hover {
-  text-shadow:2px 2px 5px rgba(255, 255, 255, 1); 
+  text-shadow: 2px 2px 5px rgba(255, 255, 255, 1);
 }
 
 .l {
@@ -135,11 +157,13 @@ nav li:hover {
 
 
 main {
-  padding: 20px;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
+
 
 section {
   margin-top: 30px;
@@ -152,14 +176,14 @@ section {
   gap: 20px;
   margin: 50px;
   background-color: #fff;
-  width: 1440;
+
 }
 
 .boxes2 {
   justify-content: right;
 }
 
-.gallery .boxes2{
+.gallery .boxes2 {
   display: flex;
   justify-content: right;
   width: 100%;
@@ -168,7 +192,7 @@ section {
 }
 
 .gallery img {
-  float: left;
+
   width: 40%;
   height: 40%;
   margin-right: 10px;
@@ -184,16 +208,16 @@ section {
   float: right;
   width: 100%;
   height: 100%;
-  display:flex;
+  display: flex;
   text-align: left;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: left;
 }
 
-.anime_link{
+.anime_link {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #000;
-  text-decoration:none;
+  text-decoration: none;
   cursor: pointer;
   position: relative;
   z-index: 0;
@@ -206,10 +230,11 @@ section {
   transition: text-shadow 0.3s ease;
   text-align: left;
   font-size: 38px;
-  }
-  .texto-sombra-2:hover {
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  }
+}
+
+.texto-sombra-2:hover {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
 
 /* OBJETIVOS e MISSÃO, VISÃO E VALORES */
 
@@ -219,20 +244,27 @@ section {
 
 .social .container {
   justify-content: center;
+  align-items: center;
+}
+
+.social .container1 {
+  justify-content: center;
+  align-items: center;
 }
 
 .box img {
   display: flex;
+  justify-items: center;
   align-items: center;
-  gap:20px;
+  gap: 20px;
   width: 350px;
 }
 
-.box .img2{
+.box .img2 {
   display: flex;
-  align-items: center;
-  gap:20px;
-  width: 90px;
+  align-items: right;
+  gap: 20px;
+  width: 100px;
 }
 
 .social .container .boxes {
@@ -241,44 +273,166 @@ section {
   width: 100%;
 }
 
+.social .container1 .boxes {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .social p {
-  text-align: center;
+  text-align: rigth;
   color: #000;
-  font-size: 28px;
+  font-size: 30px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-align: center;
-  
+
 }
 
 .box {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
+  padding: 70px;
 }
 
 .texto-sombra-1 {
   color: #fff;
   transition: text-shadow 0.3s ease;
-  }
-  .texto-sombra-1:hover {
-      text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
-  }
+}
+
+.texto-sombra-1:hover {
+  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+}
 
 /* FOOTER */
 
 footer {
-  background-color: #282828;
+  width: 100%;
+  background-color: black;
+  padding: 20px 0;
+  text-align: center;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: auto; 
+}
+
+
+.rodapeEsq {
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+  gap: 15px;
+}
+
+.rodapeEsq .titulo {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.rodapeEsq .contato {
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+#form {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  gap: 15px;
+}
+
+#form span {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.input_nome, .input_email, textarea, #contato {
+  width: 100%;
+  height: 40px;
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+  border-radius: 10px;
+  padding: 5px;
+  font-size: 14px;
+  outline: none;
+}
+
+textarea {
+  height: 100px;
+  resize: none;
+}
+
+input:focus, textarea:focus, #contato:hover {
+  border-color: #929292;
+}
+
+.rodapeDir {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   padding: 20px;
+}
+
+.endereco, .contato, .direitos {
+  flex: 1;
+  min-width: 150px;
+}
+
+.endereco p, .contato p {
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+.contato a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.contato a:hover {
+  color: #929292;
+}
+
+.direitos .titulo {
+  font-weight: bold;
+  font-size: 14px;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  footer {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+
+  .rodapeEsq, .rodapeDir {
+    padding: 0 15px;
+  }
+
+  .endereco, .contato, .direitos {
+    text-align: center;
+  }
+}
+
 
 /* LOGIN */
 
 .login {
-  height: var(--tamanho-login);
-  background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
-  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
 }
 
 .login .container {
@@ -288,74 +442,80 @@ footer {
 }
 
 .card {
-  width: 50%;
-  background-color: #fff;
-  border-radius: 10px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
-  color: black;
-  flex-direction: column;
-  height: fit-content;
-  padding: 20px 0;
+  margin-top: 30px;
+}
+
+input {
+  display: flex;
+  width: 94%;
+  /* width: 100%;
+  height: 35px; */
+  border: 0;
+  border-radius: 10px;
+  /* padding-left: 15px;
+  font-weight: 700; */
+  font-family: "Inter", sans-serif;
+}
+
+.login .input_errada {
+  display:flex;
+  width: 100%;
+  height: 35px;
+  border: 10px;
+  border-color: red;
+  border-radius: 10px;
+  /* padding-left: 15px;
+  font-weight: 700; */
+  font-family: "Inter", sans-serif;
+}
+
+.login button {
+  width: 100%;
+  height: 40px;
+  background: #fff;
+  color: #000;
+  border: 0;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+  transition: background 0.5s ease;
+  transition: color 0.5s ease;
+}
+
+.login button:hover,
+.login button:focus {
+  color: #fff;
+  background: #181818;
+}
+
+.login a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  align-self: flex-start;
+  font-weight: bold;
+}
+
+.shadow {
+  cursor: pointer;
+  transition: text-shadow 0.3s ease;
+}
+
+.shadow:hover {
+  text-shadow: 2px 2px 5px #fff;
 }
 
 .card h2 {
+  text-align: center;
   margin: 0;
   font-size: 30px;
 }
 
-.formulario {
-  display: flex;
-  height: 90%;
-  width: 80%;
-  justify-content: space-around;
-  flex-direction: column;
-}
-
-.formulario span {
-  font-size: 15px;
-  font-weight: 800;
-}
-
-.formulario input {
-  border: 2px solid #32b9cd;
-  text-align: center;
-  border-radius: 10px;
-  margin: 0;
-}
-
-.formulario select {
-  border: 2px solid #32b9cd;
-  background-color: white;
-  color: gray;
-  height: 36px;
-  text-align: center;
-  border-radius: 10px;
-  margin: 0;
-}
-
-.campo {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  padding: 5px 0;
-}
-
-.botao {
-  cursor: pointer;
-  font-family: "Barlow", sans-serif;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
-  color: #fff;
-  background-color: #ED145B;
-  width: 120px;
-  height: 30px;
-  align-self: center;
-  margin-top: 20px;
-}
 
 .loading-div {
   width: 50px;
@@ -373,7 +533,7 @@ footer {
 
 /* FORMULARIO */
 
-.alerta_erro{
+.alerta_erro {
   display: flex;
   justify-content: flex-end;
 }
@@ -390,7 +550,7 @@ footer {
   margin-right: 10%;
 }
 
-.card_erro #mensagem_erro{
+.card_erro #mensagem_erro {
   font-weight: 500;
   font-size: 20px;
 }
@@ -446,7 +606,7 @@ input {
 
 .simulador .container {
   flex-direction: column;
-  overflow: scroll; 
+  overflow: scroll;
   height: var(--tamanho-simulador);
 }
 
@@ -490,9 +650,23 @@ input {
 }
 
 @keyframes bell {
-  0%   {transform: rotate(25deg)}
-  25%  {transform: rotate(-25deg)}
-  50%  {transform: rotate(25deg)}
-  75%  {transform: rotate(-25deg)}
-  100% {transform: rotate(25deg)}
+  0% {
+    transform: rotate(25deg)
+  }
+
+  25% {
+    transform: rotate(-25deg)
+  }
+
+  50% {
+    transform: rotate(25deg)
+  }
+
+  75% {
+    transform: rotate(-25deg)
+  }
+
+  100% {
+    transform: rotate(25deg)
+  }
 }
