--- a/web-data-viz/public/css/estilo.css
+++ b/web-data-viz/public/css/estilo.css
@@ -66,8 +66,9 @@ header {
   color: #000;
   cursor: pointer;
   transition: text-shadow 0.3s ease;
+  position: relative;
+  z-index: 0;
 }
-
 .logo:hover {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
@@ -689,8 +690,7 @@ input {
 
 .painel {
   background-image: 
-  linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-  url('../assets/01.png');
+  linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -747,4 +747,69 @@ header {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+}
+
+/* HOME */
+
+#alerta {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  justify-content: center;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: #27272771;
+  overflow: hidden;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+      'FILL' 0,
+      'wght' 200,
+      'GRAD' 0,
+      'opsz' 24
+}
+
+.button {
+  min-width: 300px;
+  min-height: 60px;
+  display: inline-flex;
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #313133;
+  background: #4FD1C5;
+background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+  }
+
+.button::before {
+content: '';
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #00FFCB;
+  box-shadow: 0 0 60px rgba(0,255,203,.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
 }
